--- a/Scikit_learn.ipynb
+++ b/Scikit_learn.ipynb
@@ -2,33 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2023-04-29T22:34:36.477148Z",
+     "start_time": "2023-04-29T22:34:36.394167Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn import datasets\n",
+    "# load_diabetes takes in 3 parameters and returns bunch, if return_X_y == true, returns (data, target)\n",
+    "diabetes = datasets.load_diabetes()   # gives two values as output: .target, .data\n",
+    "y = diabetes.target  # .target stores\n",
+    "X = diabetes.data    # .data stores "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_names = ['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=8, test_size=0.4)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
